# hacker-news-crawler

./: README.md  pyproject.toml
app/: controller.py
app/config/: config.yaml
app/crawler/: __init__.py
app/crawler/application/: entry_crawling.py  entry_filtering.py
app/crawler/domain/: crawler.py  entry.py  filter.py  repository.py
app/crawler/infrastructure/: crawler_hacker_news.py  filter_functions.py  in_memory_repository.py
tests/: test_controller.py
tests/crawler/application/: test_entry_crawling.py  test_entry_filtering.py
tests/crawler/domain/: test_entry.py  test_filter.py
tests/crawler/infrastructure/: test_filter_functions.py
