[tool.poetry]
name = "hacker-news-crawler"
version = "0.1.0"
description = "A web crawler for Hacker News"
authors = ["arguellesm <arguellesesc@gmail.com>"]
readme = "README.md"
packages = [{include = "hacker_news_crawler"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
