[tool.poetry]
name = "hacker-news-crawler"
version = "0.1.0"
description = "A web crawler for Hacker News"
authors = ["arguellesm <arguellesesc@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
beautifulsoup4 = "^4.11.2"
requests="^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
